--- a/week03_fast_pipelines/homework/task2/task2_report.ipynb
+++ b/week03_fast_pipelines/homework/task2/task2_report.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Link to wandb run: https://wandb.ai/kazadaevms/efdl-hw-2-task-2?workspace=user-kazadaevms"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +17,15 @@
     "    return df.set_index(\"Step\")\n",
     "\n",
     "\n",
-    "batch_length = read_csv(\"batch_length.csv\")\n",
-    "time = read_csv(\"time.csv\")\n",
     "\n",
-    "run_names = [f\"UltraDuperBigBrain_k={k}\" for k in [1, 5, 10, 20, 50, 640]] + [\"BigBrain\", \"Brain\"]\n",
-    "assert sorted(time.columns) == sorted(run_names) == sorted(batch_length.columns)"
+    "\n",
+    "batch_length = read_csv(\"wandb_export_2025-02-17-length.csv\")\n",
+    "time = read_csv(\"wandb_export_2025-02-17-time.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -75,75 +67,75 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=1</th>\n",
-       "      <td>0.021432</td>\n",
-       "      <td>0.017449</td>\n",
-       "      <td>0.001554</td>\n",
-       "      <td>0.180943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=5</th>\n",
-       "      <td>0.023035</td>\n",
-       "      <td>0.018650</td>\n",
-       "      <td>0.001982</td>\n",
-       "      <td>0.183260</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=10</th>\n",
-       "      <td>0.023751</td>\n",
-       "      <td>0.019024</td>\n",
-       "      <td>0.002385</td>\n",
-       "      <td>0.184981</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=20</th>\n",
-       "      <td>0.024290</td>\n",
-       "      <td>0.019228</td>\n",
-       "      <td>0.002972</td>\n",
-       "      <td>0.187813</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=50</th>\n",
-       "      <td>0.030094</td>\n",
-       "      <td>0.024235</td>\n",
-       "      <td>0.004302</td>\n",
-       "      <td>0.186913</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=640</th>\n",
-       "      <td>0.083488</td>\n",
-       "      <td>0.079124</td>\n",
-       "      <td>0.004950</td>\n",
-       "      <td>0.203870</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>BigBrain</th>\n",
-       "      <td>0.074795</td>\n",
-       "      <td>0.071861</td>\n",
-       "      <td>0.002482</td>\n",
-       "      <td>0.204641</td>\n",
+       "      <td>0.017211</td>\n",
+       "      <td>0.017050</td>\n",
+       "      <td>0.001247</td>\n",
+       "      <td>0.047711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Brain</th>\n",
-       "      <td>0.185550</td>\n",
-       "      <td>0.185900</td>\n",
-       "      <td>0.178704</td>\n",
-       "      <td>0.193700</td>\n",
+       "      <td>0.045666</td>\n",
+       "      <td>0.045503</td>\n",
+       "      <td>0.003234</td>\n",
+       "      <td>0.047666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=1</th>\n",
+       "      <td>0.005450</td>\n",
+       "      <td>0.004460</td>\n",
+       "      <td>0.001161</td>\n",
+       "      <td>0.044642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=5</th>\n",
+       "      <td>0.005665</td>\n",
+       "      <td>0.004675</td>\n",
+       "      <td>0.001256</td>\n",
+       "      <td>0.045050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=10</th>\n",
+       "      <td>0.005781</td>\n",
+       "      <td>0.004743</td>\n",
+       "      <td>0.001257</td>\n",
+       "      <td>0.035886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=20</th>\n",
+       "      <td>0.006015</td>\n",
+       "      <td>0.004806</td>\n",
+       "      <td>0.001276</td>\n",
+       "      <td>0.036593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=50</th>\n",
+       "      <td>0.007130</td>\n",
+       "      <td>0.005900</td>\n",
+       "      <td>0.001377</td>\n",
+       "      <td>0.045423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=640</th>\n",
+       "      <td>0.019187</td>\n",
+       "      <td>0.018355</td>\n",
+       "      <td>0.001439</td>\n",
+       "      <td>0.047253</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              mean    median       min       max\n",
-       "UltraDuperBigBrain_k=1    0.021432  0.017449  0.001554  0.180943\n",
-       "UltraDuperBigBrain_k=5    0.023035  0.018650  0.001982  0.183260\n",
-       "UltraDuperBigBrain_k=10   0.023751  0.019024  0.002385  0.184981\n",
-       "UltraDuperBigBrain_k=20   0.024290  0.019228  0.002972  0.187813\n",
-       "UltraDuperBigBrain_k=50   0.030094  0.024235  0.004302  0.186913\n",
-       "UltraDuperBigBrain_k=640  0.083488  0.079124  0.004950  0.203870\n",
-       "BigBrain                  0.074795  0.071861  0.002482  0.204641\n",
-       "Brain                     0.185550  0.185900  0.178704  0.193700"
+       "                         mean    median       min       max\n",
+       "BigBrain             0.017211  0.017050  0.001247  0.047711\n",
+       "Brain                0.045666  0.045503  0.003234  0.047666\n",
+       "UltraBigBrain_k=1    0.005450  0.004460  0.001161  0.044642\n",
+       "UltraBigBrain_k=5    0.005665  0.004675  0.001256  0.045050\n",
+       "UltraBigBrain_k=10   0.005781  0.004743  0.001257  0.035886\n",
+       "UltraBigBrain_k=20   0.006015  0.004806  0.001276  0.036593\n",
+       "UltraBigBrain_k=50   0.007130  0.005900  0.001377  0.045423\n",
+       "UltraBigBrain_k=640  0.019187  0.018355  0.001439  0.047253"
       ]
      },
      "metadata": {},
@@ -186,48 +178,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=1</th>\n",
-       "      <td>89.778241</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>640.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=5</th>\n",
-       "      <td>89.302422</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>640.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=10</th>\n",
-       "      <td>91.600848</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>640.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=20</th>\n",
-       "      <td>97.127387</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>640.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=50</th>\n",
-       "      <td>115.155799</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>640.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UltraDuperBigBrain_k=640</th>\n",
-       "      <td>297.930450</td>\n",
-       "      <td>286.0</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>640.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>BigBrain</th>\n",
        "      <td>269.307587</td>\n",
        "      <td>262.0</td>\n",
@@ -241,20 +191,62 @@
        "      <td>640.0</td>\n",
        "      <td>640.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=1</th>\n",
+       "      <td>89.183556</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>637.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=5</th>\n",
+       "      <td>89.270444</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>640.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=10</th>\n",
+       "      <td>92.978000</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>630.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=20</th>\n",
+       "      <td>96.934889</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>640.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=50</th>\n",
+       "      <td>115.033717</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>640.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UltraBigBrain_k=640</th>\n",
+       "      <td>297.730164</td>\n",
+       "      <td>286.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>640.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                mean  median    min    max\n",
-       "UltraDuperBigBrain_k=1     89.778241    76.0    1.0  640.0\n",
-       "UltraDuperBigBrain_k=5     89.302422    75.0    5.0  640.0\n",
-       "UltraDuperBigBrain_k=10    91.600848    80.0    8.0  640.0\n",
-       "UltraDuperBigBrain_k=20    97.127387    80.0    9.0  640.0\n",
-       "UltraDuperBigBrain_k=50   115.155799    99.0   13.0  640.0\n",
-       "UltraDuperBigBrain_k=640  297.930450   286.0   69.0  640.0\n",
-       "BigBrain                  269.307587   262.0    7.0  640.0\n",
-       "Brain                     640.000000   640.0  640.0  640.0"
+       "                           mean  median    min    max\n",
+       "BigBrain             269.307587   262.0    7.0  640.0\n",
+       "Brain                640.000000   640.0  640.0  640.0\n",
+       "UltraBigBrain_k=1     89.183556    75.0    1.0  637.0\n",
+       "UltraBigBrain_k=5     89.270444    75.0    5.0  640.0\n",
+       "UltraBigBrain_k=10    92.978000    80.0    8.0  630.0\n",
+       "UltraBigBrain_k=20    96.934889    80.0   10.0  640.0\n",
+       "UltraBigBrain_k=50   115.033717    99.0   11.0  640.0\n",
+       "UltraBigBrain_k=640  297.730164   286.0   74.0  640.0"
       ]
      },
      "metadata": {},
@@ -343,7 +335,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Final words:\n",
+    "https://wandb.ai/dog-kirill-belyakov/efdl-hw-2-task-2\n",
+    "\n",
+    "\n",
+    "- Did not manage to implement UltraBigBrainDataset class\n",
+    "- Padding all sequences to the maximum length in the dataset is highly inefficient and should be avoided.\n",
+    "- Performing padding within the `collate_fn` function significantly boosts performance, as transformers operate in \\(O(N^2)\\) complexity, where \\(N\\) is the input sequence length.\n",
+    "- Grouping sequences of similar lengths within a batch drastically accelerates training—potentially by an order of magnitude. However, this approach can introduce sample correlation within batches, which may negatively impact model generalization, so it should be applied with caution.\n",
+    "\n",
     "- Padding sequences to maximum size in the dataset is a terrible idea\n",
     "- Padding sequences in collate_fn function improves the performance by a lot given that transformers work in O(N^2) where N is the length of input sequence\n",
     "- Sampling similar length sequences in one batch speeds up training by an order of magnitude. However, it may decrease the model quality by providing correlated samples in one batch, so we should use it cautiously."
@@ -355,11 +354,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "invest",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -373,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
