--- a/week03_fast_pipelines/homework/task2/task2_report.ipynb
+++ b/week03_fast_pipelines/homework/task2/task2_report.ipynb
@@ -17,8 +17,6 @@
     "    return df.set_index(\"Step\")\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "batch_length = read_csv(\"wandb_export_2025-02-17-length.csv\")\n",
     "time = read_csv(\"wandb_export_2025-02-17-time.csv\")\n"
    ]
@@ -341,11 +339,7 @@
     "- Did not manage to implement UltraBigBrainDataset class\n",
     "- Padding all sequences to the maximum length in the dataset is highly inefficient and should be avoided.\n",
     "- Performing padding within the `collate_fn` function significantly boosts performance, as transformers operate in \\(O(N^2)\\) complexity, where \\(N\\) is the input sequence length.\n",
-    "- Grouping sequences of similar lengths within a batch drastically accelerates training—potentially by an order of magnitude. However, this approach can introduce sample correlation within batches, which may negatively impact model generalization, so it should be applied with caution.\n",
-    "\n",
-    "- Padding sequences to maximum size in the dataset is a terrible idea\n",
-    "- Padding sequences in collate_fn function improves the performance by a lot given that transformers work in O(N^2) where N is the length of input sequence\n",
-    "- Sampling similar length sequences in one batch speeds up training by an order of magnitude. However, it may decrease the model quality by providing correlated samples in one batch, so we should use it cautiously."
+    "- Grouping sequences of similar lengths within a batch drastically accelerates training—potentially by an order of magnitude. However, this approach can introduce sample correlation within batches, which may negatively impact model generalization, so it should be applied with caution."
    ]
   },
   {
